<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:adjustViewBounds="true"
            android:background="@color/blue_navy"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/txt_detail_title"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:padding="3dp"
            android:scaleType="fitXY"
            android:text="@string/txt_detail_player"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_detail"
            android:gravity="center_horizontal" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="Profile"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/salary"
                    android:layout_marginRight="10dp"
                    android:textColor="@android:color/white" />
                <TextView
                    android:id="@+id/txt_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="2000"
                    android:textColor="@color/whiteTextColor"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/current_club"
                    android:layout_marginRight="10dp"
                    android:textColor="@android:color/white" />
                <TextView
                    android:id="@+id/txt_current_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="Barcelona"
                    android:textColor="@android:color/white" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/bod_player"
                    android:layout_marginRight="10dp"
                    android:textColor="@android:color/white" />
                <TextView
                    android:id="@+id/txt_birth_of_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="20 agustus 2002"
                    android:textColor="@android:color/white" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/skills_and_goal_video"
                    android:layout_marginRight="10dp"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/iv_detail_url"
                    android:layout_width="126dp"
                    android:layout_height="139dp"
                    android:padding="8dp"
                    android:background="@drawable/ic_youtube"
                    android:fontFamily="serif"
                    android:textColor="@android:color/white" />
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="History Player"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"/>
            <TextView
                android:id="@+id/txt_history_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>