<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/blue_navy"
        android:clipToPadding="false"
        android:padding="0dp">

        <ImageView
            android:id="@+id/img_player"
            android:layout_width="194dp"
            android:layout_height="120dp"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/txt_player"
            android:ellipsize="end"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="serif"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_alignBottom="@id/img_player"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="2"
            tools:text="@string/txt_player" />
        <TextView
            android:id="@+id/txt_current"
            android:ellipsize="end"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="serif"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_alignBottom="@id/img_player"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="2"
            tools:text="@string/txt_player" />
        <TextView
            android:id="@+id/txt_url"
            android:ellipsize="end"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="serif"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_alignBottom="@id/img_player"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="2"
            tools:text="@string/txt_player" />

        <TableLayout
            android:layout_width="379dp"
            android:layout_height="84dp"
            android:layout_below="@id/img_player"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="6dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:fontFamily="serif"
                    android:text="@string/salary"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="2ribu"
                    android:textColor="@color/whiteColor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:fontFamily="serif"
                    android:text="@string/current_club"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_current_club"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="FC Barcelona"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:fontFamily="serif"
                    android:text="@string/description"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_description"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="serif"
                    android:maxLines="1"
                    android:text="Description"
                    android:textColor="@android:color/white"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>